More progress on layout

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fences-unlimited-inc",
+  "private": true,
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
     "grunt": "^0.4.5",
