--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "fences-unlimited-inc",
   "private": true,
   "dependencies": {
+    "jquery": "~1.11.1",
     "bootstrap-sass-official": "~3.2.0",
-    "modernizr": "~2.8.2"
+    "modernizr": "~2.8.2",
+    "magnific-popup": "~0.9.9"
   }
 }
