--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "jquery": "~1.11.1",
     "bootstrap-sass-official": "~3.2.0",
     "modernizr": "~2.8.2",
-    "magnific-popup": "~0.9.9"
+    "magnific-popup": "~0.9.9",
+    "respond": "~1.4.2"
   }
 }
