--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,23 @@
   "name": "fences-unlimited-inc",
   "private": true,
   "dependencies": {
-    "jquery": "~1.11.1",
-    "bootstrap-sass-official": "~3.2.0",
+    "jquery": "~1.12.2",
+    "bootstrap-sass": "~3.3.5",
     "modernizr": "~2.8.2",
-    "magnific-popup": "~0.9.9",
+    "magnific-popup": "~1.1.0",
     "respond": "~1.4.2"
+  },
+  "overrides": {
+    "bootstrap-sass": {
+      "main": [
+        "assets/stylesheets/_bootstrap.scss",
+        "assets/fonts/bootstrap/*",
+        "assets/javascripts/bootstrap.js"
+      ]
+    }
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   }
 }
