--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
     "env": {
       "es6": true,
       "node": true,
-      "browser": true
+      "browser": true,
+      "jquery": {
+        "globals": {
+          "$": false
+        }
+      }
     },
     "rules": {
       "quotes": [
