--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,12 +1,12 @@
 # 1 Week
-<FilesMatch ".(ico|jpeg|jpg|js|css|png|gif|woff)$">
+<FilesMatch ".(ico|jpeg|jpg|js|css|png|gif|woff|woff2|ttf|svg|eot)$">
 Header set Cache-Control "max-age=604800, public"
 </FilesMatch>
 
 <ifModule mod_gzip.c>
 mod_gzip_on Yes
 mod_gzip_dechunk Yes
-mod_gzip_item_include file .(html?|css|js|jpeg|jpg|png|gif|woff)$
+mod_gzip_item_include file .(html?|css|js|jpeg|jpg|png|gif|woff|woff2|ttf|svg|eot)$
 mod_gzip_item_include mime ^text/.*
 mod_gzip_item_include mime ^application/x-javascript.*
 Encoding:.*gzip.*
