--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-
 services:
   npm:
     image: node:22-bookworm-slim
     working_dir: /app
     volumes:
       - .:/app
-    entrypoint: ["npm"]
+    entrypoint: ['npm']
