--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 		"@eslint/js": "^9.33.0",
 		"@playwright/test": "^1.54.2",
 		"@sveltejs/adapter-static": "^3.0.9",
-		"@sveltejs/kit": "^2.29.1",
-		"@sveltejs/vite-plugin-svelte": "^6.1.2",
+		"@sveltejs/kit": "^2.36.1",
+		"@sveltejs/vite-plugin-svelte": "^6.1.3",
 		"@types/node": "^22.15.32",
 		"eslint": "^9.33.0",
 		"eslint-config-prettier": "^10.1.8",
@@ -32,10 +32,13 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"super-sitemap": "^1.0.5",
-		"svelte": "^5.38.1",
+		"svelte": "^5.38.2",
 		"svelte-check": "^4.3.1",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.39.1",
-		"vite": "^7.1.2"
+		"vite": "^7.1.3"
+	},
+	"dependencies": {
+		"install": "^0.13.0"
 	}
 }
